--- a/iris_nb.ipynb
+++ b/iris_nb.ipynb
@@ -9,7 +9,7 @@
     "### Setup\n",
     "- \"clustering.py\" is the file that contains the KMeans wrapper class\n",
     "- clustering.py makes use of kmeans.so which is build from kmeans.cu and kmeansHelper.cu for CUDA implementation of Kmeans fitting/labeling data\n",
-    "- all files were in the same directory when running prior to submission (i.e. kmeans.cu, kmeansHelper.cu, kmeans.so, kmeans_iris_demo.ipynb, clustering.py)\n"
+    "- all files were in the same directory when running prior to submission (i.e. kmeans.cu, kmeansHelper.cu, kmeans.so, iris_nb.ipynb, clustering.py)\n"
    ]
   },
   {
