LogReg test in C

--- a/linreg/Untitled.ipynb
+++ b/linreg/Untitled.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LinReg()"
+    "y = y > y.mean()"
    ]
   },
   {
@@ -190,7 +190,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr.fit(X.values.astype('float64'), y.values.astype('float64'))"
+    "y = y.astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21613, 8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.to_csv('../logreg/X.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.to_csv('../logreg/y.csv', index=False)"
    ]
   },
   {
