--- a/logreg/test.ipynb
+++ b/logreg/test.ipynb
@@ -1,20 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression CUDA Demonstration\n",
+    "\n",
+    "For this demo, we will compare the functionality of our CUDA-based LogisticRegression (called `LogReg`) to a numpy-based LogisticRegression (called `PyLogReg`)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from ctypes import *\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +33,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Based on the House Prices Kaggle dataset.\n",
+    "\n",
+    "This isn't a likely appliciation for a Logistic Regression but we chose it anyway since the dataset is entirely numeric allowing us to manipulate it easily for use with our C-based implementation. We are changing the label `y` to be `True` if `price[i] > price.mean()`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +168,7 @@
        "4      8      1987  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,18 +178,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "y = (df['price'] > df['price'].mean()).astype('float64')\n",
-    "X = df.loc[:,'bedrooms':].astype('float64')"
+    "### Separating observations and labels\n",
+    "\n",
+    "Extremely important note: We learned the hard way that Pandas stores its values in column-major ordering, but numpy uses row-major. Furthermore, the underlying memory is not contiguous until you call `copy()`, thus making it nearly impossible to use with C without extra legwork."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = (df['price'] > df['price'].mean()).astype('float64').copy()\n",
+    "X = df.loc[:,'bedrooms':].astype('float64').copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calling our Numpy-based implementation to establish a baseline for coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,25 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/oupton/git/CUDA_Stats/logreg/classifiers.py:19: RuntimeWarning: overflow encountered in exp\n",
-      "  return 1 / (1 + np.exp(-z))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logit.fit(X.values.astype('float64'), y.values.astype('float64'))"
+    "logit.fit(X.values, y.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +233,7 @@
        "       -1.45910210e-02, -2.16409010e-01, -2.01157337e-01, -1.28157098e+02])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,53 +244,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('theta.csv', logit.theta, delimiter=',')"
+    "np_yt = logit.predict(X.values, threshold=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now calling our CUDA-based implementation to compare"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "yt = logit.predict_prob(X)"
+    "logit = LogReg(n_iter=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('yt.csv', yt, delimiter=',')"
+    "logit.fit(X.values.copy(), y.values.copy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logit.fit(X.values.astype('float64'), y.values.astype('float64'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.7734364 ,  0.2462082 , -1.22313193,  0.64911671, -7.33802003,\n",
-       "        1.43797842, -2.12991027,  0.46665493])"
+       "array([-1.33800637e-01,  4.09142849e-03,  6.57718073e+01,  3.35666405e+01,\n",
+       "       -1.45910210e-02, -2.16409010e-01, -2.01157337e-01, -1.28157098e+02])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,24 +299,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuda_yt = logit.predict(X.values.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Great! Looks like we are getting the correct coefficients from our CUDA-based implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import ctypes\n",
-    "from ctypes import *\n",
-    "ctypes.sizeof(c_double)"
+    "np.sum(cuda_yt == np_yt) == cuda_yt.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Also, our predic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here is our loop that implements the logistic regression\n",
+    "```c\n",
+    "for (size_t i = 0; i < n_iter; i++) {\n",
+    "\n",
+    "    // dot(X, theta)\n",
+    "    vec_dot_mat<<<GRIDSIZE(m), BLOCKSIZE>>>(Xd, thetad, z, m, n);\n",
+    "\n",
+    "    // h = sigm(z)\n",
+    "    vec_sigmoid<<<GRIDSIZE(m), BLOCKSIZE>>>(z, h, 1, m);\n",
+    "\n",
+    "    // h = -h\n",
+    "    vec_scalar_mul<<<GRIDSIZE(m), BLOCKSIZE>>>(h, h, -1.0, 1, m);\n",
+    "\n",
+    "    // h = y - h\n",
+    "    vec_add<<<GRIDSIZE(m), BLOCKSIZE>>>(h, yd, h, 1, m);\n",
+    "\n",
+    "    // h = -(y - h) = h - y\n",
+    "    vec_scalar_mul<<<GRIDSIZE(m), BLOCKSIZE>>>(h, h, -1.0, 1, m); \n",
+    "\n",
+    "    // g = dot(Xt, h)\n",
+    "    vec_dot_mat<<<GRIDSIZE(n), BLOCKSIZE>>>(Xt, h, g, n, m);\n",
+    "\n",
+    "    // g = -(g*lr) / m\n",
+    "    vec_scalar_mul<<<GRIDSIZE(n), BLOCKSIZE>>>(g, g, -(lr / m), 1, n);\n",
+    "\n",
+    "    // theta = theta + (-g) = theta - g\n",
+    "    vec_add<<<GRIDSIZE(n), BLOCKSIZE>>>(thetad, g, thetad, 1, n);\n",
+    "}\n",
+    "```"
    ]
   },
   {
